[Thiago] LCsY6cIu fixes other news list item spacing

--- a/themes/main/src/sass/_helpers/mixins.scss
+++ b/themes/main/src/sass/_helpers/mixins.scss
@@ -222,6 +222,7 @@
 
     @include media-query (THREE) {
       width: $COLUMN-WIDTH;
+      margin-left: $LATERAL-COLUMN-SPACE;
     }
 
     a {
